@@ -1,5 +1,6 @@
 2007-08-24  Helmut Eller  <heller@common-lisp.net>
 
+	* slime-typeout-frame.el: New file.
 	* slime-xref-browser.el: New file.
 	* slime-highlight-edits.el: New file.
 	* slime-scratch.el: New file.
